2012-08-29 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/http/*.c, gw/smsc/smsc_http.c: splitted HTTP SMSC submodules into files.
      This allow us to reduce code in HTTP SMSC itself and prepare this SMSC for
      dynamicaly loading of submodules.
      No behavior change in any implementation.

2012-08-22 Alexander Malysh <amalysh at kannel.org>
    * gwlib/octstr.c: replaced old hash funtion with hash from Robert Sedgewick.

2012-08-06 Andreas Fink <andreas at fink.org>
    * gw/smsc/smsc_at.c: fixed a bug which crashed bearerbox if no
      modem definition was used in the config.

2012-08-06  Stipe Tolj  <stolj at kannel.org>
    * test/test_dict.c: add a second Dict to cross-key check, testing value
      consistancy.
      
2012-08-06  Stipe Tolj  <stolj at kannel.org>
    * gw/dlr_spool.c: reduce code complexity be re-using the essential parts.
    
2012-08-06  Stipe Tolj  <stolj at kannel.org>
    * */*: updating the LICENSE preamble to reflect the correct year.
    
2012-08-06  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: add documentation about 'dlr-storage = spool'
    * gw/dlr_p.h: add dlr_init_spool() prototype.
    * gw/dlr_spool.c: implement a DLR storage using a spool directory. This
      uses either a SHA1 or MD5 hash representing the msg ID, adding a suffix
      of the destination address. When dlr_find() is called, we use the same
      heuristic approach to resolve the correct DLR message as in the internal
      DLR storage module.
    * gw/dlr.c: add initialization call to dlr_init_spool() if configured
      accordingly.
    * gwlib/cfg.def: add config directive 'dlr-spool' in the core group to let
      the user define which DLR storage spool location should be used.
    This patchset implements a simple, natively supported (no external libs)
    persistent DLR storage on the local file system using a spool directory.
    
2012-08-06  Stipe Tolj  <stolj at kannel.org>